--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,12 @@
 # Session Data files
 .RData
 .RDataTmp
+.DS_Store
+
 
 # User-specific files
 .Ruserdata
+*.Rproj
 
 # Example code in package build process
 *-Ex.R
